<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_main_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainListActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_main_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/rvi_recipes_list_item"/>

    <LinearLayout
        android:id="@+id/ll_error_message_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="invisible">

        <TextView
            android:id="@+id/tv_error_message_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:padding="16dp"
            android:text="@string/network_call_error_textview_message"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/retry_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableEnd="@drawable/vg_refresh"
            android:text="@string/retry_button_label"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/pb_loading_indicator"
        android:layout_width="@dimen/progbar_width"
        android:layout_height="@dimen/progbar_height"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:visibility="invisible"/>

</android.support.design.widget.CoordinatorLayout>
