...
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            android:textSize="18sp"
            tools:text="Step 1: Mix it all up"/>

        <com.google.android.exoplayer2.ui.PlayerView
            android:id="@+id/exo_player_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"/>

        <ImageView
            android:id="@+id/exo_placeholder_view"
...
