...
            android:layout_marginStart="6dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/recipe_photo_description"
            android:scaleType="centerCrop"
            android:src="@drawable/vg_small_oven"
            android:tint="#01d277"
            app:layout_constraintEnd_toStartOf="@id/tv_recipe_name"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_recipe_name"
...
